--- a/Themes/GGO_Kirito/GGO_Kirito.theme.css
+++ b/Themes/GGO_Kirito/GGO_Kirito.theme.css
@@ -10,7 +10,7 @@
 @import url('https://raw.githack.com/VaporousCreeper/BetterDiscord-ThemesAndPlugins/master/Themes/GGO_Kirito/core.css');
 
 :root{
-    --background: url('https://wallpapercave.com/wp/wp11696085.png');
+    --background: url('https://images6.alphacoders.com/128/1283057.jpg');
     --activetext-colour: white;
 
     --primary1-colour: red;
@@ -19,7 +19,7 @@
 
     --secondary1-colour: rgba(135,206,235, 0);
     --secondary2-colour: rgba(255,211,0,0);
-    --secondary3-colour: rgba(255,255,255,255);
+    --secondary3-colour: rgba(0,0,0,0.5);
 
     --transparency-1: linear-gradient(to right, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
     --transparency-2: linear-gradient(to right, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
