--- a/Themes/GGO_Kirito/GGO_Kirito.theme.css
+++ b/Themes/GGO_Kirito/GGO_Kirito.theme.css
@@ -13,7 +13,7 @@
     --background: url('https://images6.alphacoders.com/128/1283057.jpg');
     --activetext-colour: white;
 
-    --primary1-colour: red;
+    --primary1-colour: pink;
     --primary2-colour: rgba(246, 212, 221);
     --primary3-colour: rgba(234, 160, 177);
 
@@ -31,7 +31,7 @@
 /*
 Theme Owned and Made by VaporousCreeper#9514
   
-Background Img: https://images6.alphacoders.com/128/1283057.jpg 
+Background Img: https://wpblink.com/sites/default/files/wallpaper/anime/66761/sword-art-online-ii-wallpapers-hd-66761-327252.png
 Transparency2 Module: https://raw.githack.com/Ruben7173/Ruben7173.github.io/master/BetterDiscord-Themes/Modules/transparency2.css - By Ruben7173#5048
 
 The 2 items above are not owned by me, They go to there respected owners 
