--- a/Themes/GGO_Kirito/GGO_Kirito.theme.css
+++ b/Themes/GGO_Kirito/GGO_Kirito.theme.css
@@ -10,12 +10,12 @@
 @import url('https://raw.githack.com/VaporousCreeper/BetterDiscord-ThemesAndPlugins/master/Themes/GGO_Kirito/core.css');
 
 :root{
-    --background: url('https://a.storyblok.com/f/178900/1504x846/43c645d797/chainsaw-man-ed-4.jpg');
-    --activetext-colour: white;
+    --background: url('https://media.discordapp.net/attachments/1025989008414752769/1215529413169385533/chainsaw-man-ed-4.png?ex=65fd14fb&is=65ea9ffb&hm=18bfbec977515476d690072de9b3d8f4e2037e7332abcc0c9a80db3f2f22ff5c&=&format=webp&quality=lossless&width=1201&height=676');
+    --activetext-colour: black;
 
     --primary1-colour: red;
-    --primary2-colour: rgba(255,17,0,0.2);
-    --primary3-colour: rgba(69,5,0,0.3);
+    --primary2-colour: rgba(224,224,224,0.2);
+    --primary3-colour: rgba(130,130,130,0.3);
 
     --secondary1-colour: rgba(50,50,50,0.3);
     --secondary2-colour: rgba(100,100,100,1);
