--- a/Themes/GGO_Kirito/GGO_Kirito.theme.css
+++ b/Themes/GGO_Kirito/GGO_Kirito.theme.css
@@ -13,7 +13,7 @@
     --background: url('https://media.discordapp.net/attachments/1025989008414752769/1215529413169385533/chainsaw-man-ed-4.png?ex=65fd14fb&is=65ea9ffb&hm=18bfbec977515476d690072de9b3d8f4e2037e7332abcc0c9a80db3f2f22ff5c&=&format=webp&quality=lossless&width=1201&height=676');
     --activetext-colour: black;
 
-    --primary1-colour: red;
+    --primary1-colour: grey;
     --primary2-colour: rgba(224,224,224,0.2);
     --primary3-colour: rgba(130,130,130,0.3);
 
